<resources>
    <string name="app_name">GymApplication</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">My Profile</string>
    <string name="title_dashboard">Plans</string>
    <string name="title_notifications">DietPlans</string>
    <string name="enter_the_password">enter the password</string>
    <string name="enter_the_name">enter the email-id</string>
    <string name="enter_the_confirm_password">enter the confirm password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male" />
    <string name="female" />
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="training">Training</string>
    <string name="brkfst1a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst1b">Oatmeal porridge</string>
    <string name="brkfst2a">1 cup of tea or coffee without sugar and milk</string>
    <string name="brkfst2b"> Oats with fat-free milk(barley)</string>
    <string name="brkfst3a">1 cup of tea or coffee without sugar and milk</string>
    <string name="brkfst3b">1 serving Avocado-Egg Toast</string>
    <string name="brkfst4a">1 serving Blueberry-Banana Overnight Oats </string>
    <string name="brkfst4b">1 serving Apple Cider Vinegar Tonic</string>
    <string name="brkfst5a">1 1/2 cups Blueberry-Banana Overnight Oats (</string>
    <string name="brkfst5b">Oatmeal porridge</string>
    <string name="brkfst6a">1 slice Peanut Butter-Banana Cinnamon Toast </string>
    <string name="brkfst6b"> 1 kiwi</string>
    <string name="brkfst7a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey </string>
    <string name="brkfst7b">2 pieces of whole grains toast with vegetables</string>
    <string name="brkfst8a">1 cup of tea or black coffee without sugar and milk </string>
    <string name="brkfst8b">2 medium plums with 1 cup green tea </string>
    <string name="brkfst9a">Blueberry-Pecan Pancakes topped with 2 Tbsp. blueberries and 2 Tbsp. nonfat Greek yogurt mixed with 1 tsp. maple syrup</string>
    <string name="brkfst9b">1 plum and 1 cup green tea </string>
    <string name="brkfst10a">1 serving Avocado-Egg Toast</string>
    <string name="brkfst10b">1 cup Apple Cider Vinegar Tonic with 1 plum</string>
    <string name="brkfst11a">1 slice Peanut Butter-Banana Cinnamon Toast </string>
    <string name="brkfst11b">1 cup green tea </string>
    <string name="brkfst12a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey</string>
    <string name="brkfst12b">1 medium watermelon</string>
    <string name="brkfst13a">Blueberry-Pecan Pancakes topped with 2 Tbsp. nonfat Greek yogurt mixed with 1 tsp. maple syrup</string>
    <string name="brkfst13b">1 cup Herbal Chamomile Health Tonic </string>
    <string name="brkfst14a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst14b">1 medium pineapple</string>
    <string name="brkfst15a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst15b">1 medium apple</string>
    <string name="brkfst16a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst16b">1 cup Herbal Chamomile Health Tonic </string>
    <string name="brkfst17a">Blueberry-Pecan Pancakes topped with 2 Tbsp. nonfat Greek yogurt mixed with 1 tsp. maple syrup</string>
    <string name="brkfst17b">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst18a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey</string>
    <string name="brkfst18b">1 medium apple</string>
    <string name="brkfst19a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst19b">1 medium orange</string>
    <string name="brkfst20a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey</string>
    <string name="brkfst20b">Blueberry-Pecan Pancakes topped with 2 Tbsp. nonfat Greek yogurt mixed with 1 tsp. maple syrup</string>
    <string name="brkfst21a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst21b">1 medium pineapple</string>
    <string name="brkfst22a">2 Muffin-Tin Quiches with Smoked Cheddar &amp; Potato and 1 medium orange </string>
    <string name="brkfst22b">1 medium pineapple</string>
    <string name="brkfst23a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey</string>
    <string name="brkfst23b">1 medium orange</string>
    <string name="brkfst24a">1 cup strawberry and 1 cup green tea</string>
    <string name="brkfst24b">Blueberry-Pecan Pancakes topped with 2 Tbsp. nonfat Greek yogurt mixed with 1 tsp. maple syrup</string>
    <string name="brkfst25a">2 Muffin-Tin Quiches with Smoked Cheddar &amp; Potato and 1 medium orange </string>
    <string name="brkfst25b">1 medium pineapple</string>
    <string name="brkfst26a">2 Muffin-Tin Quiches with Smoked Cheddar &amp; Potato and 1 medium orange </string>
    <string name="brkfst26b">1 medium orange</string>
    <string name="brkfst27a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst27b">1 medium orange</string>
    <string name="brkfst28a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="brkfst28b">1 cup green tea</string>
    <string name="brkfst29a">Blueberry-Pecan Pancakes topped with 2 Tbsp. nonfat Greek yogurt mixed with 1 tsp. maple syrup</string>
    <string name="brkfst29b">1 medium pineapple</string>
    <string name="brkfst30a">1 cup green tea </string>
    <string name="brkfst30b">1 medium orange</string>
    <string name="Snack1a">1/4 cup diced cucumber and 1/4 cup shelled edamame tossed in 1 tsp. lime juice and a pinch each of salt and pepper</string>
    <string name="Snack2a">1 cup of tea or coffee without sugar and milk</string>
    <string name="Snack3a">1 cup of tea or coffee without sugar and milk</string>
    <string name="Snack4a">1 serving Blueberry-Banana Overnight Oats </string>
    <string name="Snack5a">1/4 cup diced cucumber and 1/4 cup shelled edamame tossed in 1 tsp. lime juice and a pinch each of salt and pepper(</string>
    <string name="Snack6a">1 slice Peanut Butter-Banana Cinnamon Toast </string>
    <string name="Snack7a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey </string>
    <string name="Snack8a"> 1 serving Asian Beef Noodle Bowl and 1 kiwi</string>
    <string name="Snack9a">Blueberry-Pecan Pancakes topped with 2 Tbsp. blueberries and 2 Tbsp. nonfat Greek yogurt mixed with 1 tsp. maple syrup</string>
    <string name="Snack10a">1/4 cup diced cucumber and 1/4 cup shelled edamame tossed in 1 tsp. lime juice and a pinch each of salt and pepper</string>
    <string name="Snack11a">1 slice Peanut Butter-Banana Cinnamon Toast </string>
    <string name="Snack12a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey</string>
    <string name="Snack13a">1/4 cup diced cucumber and 1/4 cup shelled edamame tossed in 1 tsp. lime juice and a pinch each of salt and pepper</string>
    <string name="Snack14a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="Snack15a"> 1 serving Asian Beef Noodle Bowl and 1 kiwi</string>
    <string name="Snack16a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="Snack17a">1/4 cup diced cucumber and 1/4 cup shelled edamame tossed in 1 tsp. lime juice and a pinch each of salt and pepper</string>
    <string name="Snack18a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey</string>
    <string name="Snack19a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="Snack20a">1/4 cup diced cucumber and 1/4 cup shelled edamame tossed in 1 tsp. lime juice and a pinch each of salt and pepper</string>
    <string name="Snack21a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="Snack22a">2 Muffin-Tin Quiches with Smoked Cheddar &amp; Potato and 1 medium orange </string>
    <string name="Snack23a">1 cup raspberries topped with 1 cup yogurt, 1 Tbsp. sliced almonds &amp; 1 tsp. honey</string>
    <string name="Snack24a">1 cup strawberry and 1 cup green tea</string>
    <string name="Snack25a">2 Muffin-Tin Quiches with Smoked Cheddar &amp; Potato and 1 medium orange </string>
    <string name="Snack26a"> 1 serving Asian Beef Noodle Bowl and 1 kiwi </string>
    <string name="Snack27a"> 1 serving Asian Beef Noodle Bowl and 1 kiwi</string>
    <string name="Snack28a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="Snack29a">Blueberry-Pecan Pancakes topped with 2 Tbsp. nonfat Greek yogurt mixed with 1 tsp. maple syrup</string>
    <string name="Snack30a">1 cup green tea </string>
    <string name="lunch1a">1/2 (6-inch) whole-wheat pita bread stuffed, 1 cup mixed greens, 1/4 cup sliced cucumber and 1 Tbsp. Tahini Sauce with Lemon &amp; Garlic</string>
    <string name="lunch1b">1 serving Veggie and veg Sandwich</string>
    <string name="lunch2a">1/2 (6-inch) whole-wheat pita bread stuffed, 1 cup mixed greens, 1/4 cup sliced cucumber and 1 Tbsp. Tahini Sauce with Lemon &amp; Garlic</string>
    <string name="lunch2b"> Oats with fat-free milk(barley)</string>
    <string name="lunch3a">1 cup greens soup with less amount of salt</string>
    <string name="lunch3b">1 serving Avocado-Egg Toast</string>
    <string name="lunch4a">1 serving Veggie and veg Sandwich </string>
    <string name="lunch4b">1 serving Apple Cider Vinegar Tonic</string>
    <string name="lunch5a">1 1/2 cups Blueberry-Banana Overnight Oats (</string>
    <string name="lunch5b">Oatmeal porridge</string>
    <string name="lunch6a">1/2 (6-inch) whole-wheat pita bread stuffed, 1 cup mixed greens, 1/4 cup sliced cucumber and 1 Tbsp. Tahini Sauce with Lemon &amp; Garlic </string>
    <string name="lunch6b"> 1 serving Veggie and veg Sandwich</string>
    <string name="lunch7a">1/2 (6-inch) whole-wheat pita bread stuffed, 1 cup mixed greens, 1/4 cup sliced cucumber and 1 Tbsp. Tahini Sauce with Lemon &amp; Garlic </string>
    <string name="lunch7b">2 pieces of whole grains toast with vegetables</string>
    <string name="lunch8a">1 serving Curried Chicken Apple Wraps with 1 medium pear </string>
    <string name="lunch8b">2 medium plums with 1 cup green tea </string>
    <string name="lunch9a">1 serving Veggie and veg Sandwich</string>
    <string name="lunch9b">1 cup greens soup with less amount of salt </string>
    <string name="lunch10a">1 serving meat Apple Wraps with 1 medium pear </string>
    <string name="lunch10b">1 cup Apple Cider Vinegar Tonic with 1 plum</string>
    <string name="lunch11a">1 serving Curried Chicken Apple Wraps with 1 medium pear  </string>
    <string name="lunch11b">1 cup green tea </string>
    <string name="lunch12a">1 serving Veggie and veg Sandwich</string>
    <string name="lunch12b">1 medium watermelon</string>
    <string name="lunch13a">1 serving Curried Chicken Apple Wraps with 1 medium pear </string>
    <string name="lunch13b">1 cup Herbal Chamomile Health Tonic </string>
    <string name="lunch14a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="lunch14b">1 medium pineapple</string>
    <string name="lunch15a">1 cup greens soup with less amount of salt</string>
    <string name="lunch15b">1 medium apple</string>
    <string name="lunch16a">1 cup of tea or black coffee without sugar and milk</string>
    <string name="lunch16b">1 cup Herbal Chamomile Health Tonic </string>
    <string name="lunch17a">1 serving Curried Chicken Apple Wraps with 1 medium pear </string>
    <string name="lunch17b">1 cup greens soup</string>
    <string name="others">Others</string>
</resources>