<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="regsave"
    type="com.example.gymapplication.RegisterHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/b"
        tools:context=".ui.Activity.RegisterActivity">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idregister"
            android:text="REGISTRATION"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="enter your name"
            android:layout_margin="15dp"
            android:id="@+id/regname"
            app:layout_constraintTop_toBottomOf="@+id/idregister"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="enter your height"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:id="@+id/regheight"
            app:layout_constraintTop_toBottomOf="@+id/regname"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="enter your weight"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:id="@+id/regweight"
            app:layout_constraintTop_toBottomOf="@+id/regheight"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="enter your targetedweight"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:id="@+id/regtargetedweight"
            app:layout_constraintTop_toBottomOf="@+id/regweight"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20dp"
            android:id="@+id/reggender"
            app:layout_constraintTop_toBottomOf="@+id/regtargetedweight"
            app:layout_constraintLeft_toLeftOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="gender:"
                />

            <RadioButton
                android:id="@+id/regmale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Male"
                android:onClick="@{regsave::onRegRadiomaleButtonClicked}"
                />
            <RadioButton
                android:id="@+id/regfemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female"
                android:onClick="@{regsave::onRegRadiofemaleButtonClicked}"
                />
            <RadioButton
                android:id="@+id/regothers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:onClick="@{regsave::onRegRadiootherButtonClicked}"
                />
        </RadioGroup>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="enter your age"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:id="@+id/regage"
            app:layout_constraintTop_toBottomOf="@+id/reggender"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/regage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="save"
            android:onClick="@{regsave::onRegisterSavedClicked}"
            android:layout_margin="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>